--- a/src/components/Accomodation/AccomodationDetails/Styles.module.scss
+++ b/src/components/Accomodation/AccomodationDetails/Styles.module.scss
@@ -1,2 +1,58 @@
 @import '../../../styles/variables';
 @import '../../../styles/mixins';
+
+.propertyTypeHeader {
+  margin-bottom: 30px;
+}
+
+.innerWrapper {
+  width: 100%;
+  background-color: #fff;
+  padding: 1rem 1rem 2rem;
+  border: 1px solid #e4e4e4;
+  min-height: 350px;
+  @include flex;
+  @include flex-direction(column);
+  flex-grow: 1;
+  flex-wrap: nowrap;
+  align-items: stretch;
+  justify-content: space-between;
+  text-decoration: none;
+  margin-bottom: 0;
+  text-transform: uppercase;
+  .accomodationBody {
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 20px;
+    display: block;
+    text-decoration: none;
+    .topWrapper {
+      display: block;
+      width: 100%;
+      overflow: hidden;
+      position: relative;
+      padding-bottom: 75.25%;
+      &:after {
+        display: block;
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.6);
+        z-index: 6;
+      }
+      img {
+        height: auto;
+        vertical-align: middle;
+        max-width: 100%;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        z-index: 5;
+        @include transform(translate(-50%, -50%));
+      }
+    }
+  }
+}
