--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -1,295 +1,291 @@
 .container {
-    margin: 0 auto;
-    width: 100%;
-    max-width: 1132px;
-    position: relative;
-    
-    &.padding {
-      padding-right: 1.5rem;
-      padding-left: 1.5rem;
-    }
-  
-    &.no-padding {
-      padding-right: 0;
-      padding-left: 0;
-    }
-  
-    &.full {
-      max-width: 100%;
-    }
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1132px;
+  position: relative;
+
+  &.padding {
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
   }
-  .bottom-margin-col {
-    margin-bottom: 30px;
+
+  &.no-padding {
+    padding-right: 0;
+    padding-left: 0;
   }
-  
-  .row {
-    @include flex;
-    flex: 0 1 auto;
-    flex-wrap: wrap;
-    margin-right: -1.5rem;
-    margin-left: -1.5rem;
+
+  &.full {
+    max-width: 100%;
   }
-    // Small columns
-    .col-xs,
-    .col-xs-1,
-    .col-xs-2,
-    .col-xs-3,
-    .col-xs-4,
-    .col-xs-5,
-    .col-xs-6,
-    .col-xs-7,
-    .col-xs-8,
-    .col-xs-9,
-    .col-xs-10,
-    .col-xs-11,
-    .col-xs-12
- {
-      flex: 0 0 auto;
-      padding-right: 1.5rem;
-      padding-left: 1.5rem;
-    }
-    
-    .col-xs {
-      -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-      flex-grow: 1;
-      -ms-flex-preferred-size: 0;
-      flex-basis: 0;
-      max-width: 100%;
-    }
-    
-    
-    .col-xs-3 {
-      -ms-flex-preferred-size: 25%;
-      flex-basis: 25%;
-      max-width: 25%;
-    }
-    
-    .col-xs-4 {
-      -ms-flex-preferred-size: 33.33333333%;
-      flex-basis: 33.33333333%;
-      max-width: 33.33333333%;
-    }
+}
+.margin-bottom {
+  margin-bottom: 30px;
+}
 
-    .col-xs-5 {
-      -ms-flex-preferred-size: 41.66666667%;
-      flex-basis: 41.66666667%;
-      max-width: 41.66666667%;
-    }
-    
-    .col-xs-6 {
-      -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-      max-width: 50%;
-    }
+.row {
+  @include flex;
+  flex: 0 1 auto;
+  flex-wrap: wrap;
+  margin-right: -1.5rem;
+  margin-left: -1.5rem;
+}
+// Small columns
+.col-xs,
+.col-xs-1,
+.col-xs-2,
+.col-xs-3,
+.col-xs-4,
+.col-xs-5,
+.col-xs-6,
+.col-xs-7,
+.col-xs-8,
+.col-xs-9,
+.col-xs-10,
+.col-xs-11,
+.col-xs-12 {
+  flex: 0 0 auto;
+  padding-right: 1.5rem;
+  padding-left: 1.5rem;
+}
 
-    .col-xs-7 {
-      -ms-flex-preferred-size: 58.33333333%;
-      flex-basis: 58.33333333%;
-      max-width: 58.33333333%;
-    }
-    
-    .col-xs-12 {
-      -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
-      max-width: 100%;
-    }
+.col-xs {
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  -ms-flex-preferred-size: 0;
+  flex-basis: 0;
+  max-width: 100%;
+}
 
-    
-  @media only screen and (min-width: 641px) {
-    .col-sm,
-    .col-sm-1,
-    .col-sm-2,
-    .col-sm-3,
-    .col-sm-4,
-    .col-sm-5,
-    .col-sm-6,
-    .col-sm-7,
-    .col-sm-8,
-    .col-sm-9,
-    .col-sm-10,
-    .col-sm-11,
-    .col-sm-12 {
-      box-sizing: border-box;
-      -webkit-box-flex: 0;
-      -ms-flex: 0 0 auto;
-      flex: 0 0 auto;
-      padding-right: 1.5rem;
-      padding-left: 1.5rem;
-    }
-  
-    .col-sm {
-      -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-      flex-grow: 1;
-      -ms-flex-preferred-size: 0;
-      flex-basis: 0;
-      max-width: 100%;
-    }
-  
-    .col-sm-3 {
-      -ms-flex-preferred-size: 25%;
-      flex-basis: 25%;
-      max-width: 25%;
-    }
-  
-    .col-sm-4 {
-      -ms-flex-preferred-size: 33.33333333%;
-      flex-basis: 33.33333333%;
-      max-width: 33.33333333%;
-    }
+.col-xs-3 {
+  -ms-flex-preferred-size: 25%;
+  flex-basis: 25%;
+  max-width: 25%;
+}
 
-    .col-sm-5 {
-      -ms-flex-preferred-size: 41.66666667%;
-      flex-basis: 41.66666667%;
-      max-width: 41.66666667%;
-    }
-  
-    .col-sm-6 {
-      -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-      max-width: 50%;
-    }
+.col-xs-4 {
+  -ms-flex-preferred-size: 33.33333333%;
+  flex-basis: 33.33333333%;
+  max-width: 33.33333333%;
+}
 
-    .col-sm-7 {
-      -ms-flex-preferred-size: 58.33333333%;
-      flex-basis: 58.33333333%;
-      max-width: 58.33333333%;
-    }
-  
-    .col-sm-12 {
-      -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
-      max-width: 100%;
-    }
+.col-xs-5 {
+  -ms-flex-preferred-size: 41.66666667%;
+  flex-basis: 41.66666667%;
+  max-width: 41.66666667%;
+}
+
+.col-xs-6 {
+  -ms-flex-preferred-size: 50%;
+  flex-basis: 50%;
+  max-width: 50%;
+}
+
+.col-xs-7 {
+  -ms-flex-preferred-size: 58.33333333%;
+  flex-basis: 58.33333333%;
+  max-width: 58.33333333%;
+}
+
+.col-xs-12 {
+  -ms-flex-preferred-size: 100%;
+  flex-basis: 100%;
+  max-width: 100%;
+}
+
+@media only screen and (min-width: 641px) {
+  .col-sm,
+  .col-sm-1,
+  .col-sm-2,
+  .col-sm-3,
+  .col-sm-4,
+  .col-sm-5,
+  .col-sm-6,
+  .col-sm-7,
+  .col-sm-8,
+  .col-sm-9,
+  .col-sm-10,
+  .col-sm-11,
+  .col-sm-12 {
+    box-sizing: border-box;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
   }
-  
-  @media only screen and (min-width: 768px) {
-    .col-md,
-    .col-md-1,
-    .col-md-2,
-    .col-md-3,
-    .col-md-4,
-    .col-md-5,
-    .col-md-6,
-    .col-md-7,
-    .col-md-8,
-    .col-md-9,
-    .col-md-10,
-    .col-md-11,
-    .col-md-12 {
-      flex: 0 0 auto;
-      padding-right: 1.5rem;
-      padding-left: 1.5rem;
-    }
-  
-    .col-md {
-      -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-      flex-grow: 1;
-      -ms-flex-preferred-size: 0;
-      flex-basis: 0;
-      max-width: 100%;
-    }
-  
-    .col-md-3 {
-      -ms-flex-preferred-size: 25%;
-      flex-basis: 25%;
-      max-width: 25%;
-    }
-  
-    .col-md-4 {
-      -ms-flex-preferred-size: 33.33333333%;
-      flex-basis: 33.33333333%;
-      max-width: 33.33333333%;
-    }
 
-    .col-md-5 {
-      -ms-flex-preferred-size: 41.66666667%;
-      flex-basis: 41.66666667%;
-      max-width: 41.66666667%;
-    }
-  
-    .col-md-6 {
-      -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-      max-width: 50%;
-    }
-
-    .col-md-7 {
-      -ms-flex-preferred-size: 58.33333333%;
-      flex-basis: 58.33333333%;
-      max-width: 58.33333333%;
-    }
-  
-    .col-md-12 {
-      -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
-      max-width: 100%;
-    }
+  .col-sm {
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    -ms-flex-preferred-size: 0;
+    flex-basis: 0;
+    max-width: 100%;
   }
-  
-  @media only screen and (min-width: 1024px) {
-    .col-lg,
-    .col-lg-1,
-    .col-lg-2,
-    .col-lg-3,
-    .col-lg-4,
-    .col-lg-5,
-    .col-lg-6,
-    .col-lg-7,
-    .col-lg-8,
-    .col-lg-9,
-    .col-lg-10,
-    .col-lg-11,
-    .col-lg-12 {
-      flex: 0 0 auto;
-      padding-right: 1.5rem;
-      padding-left: 1.5rem;
-    }
-    .col-lg {
-      -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-      flex-grow: 1;
-      -ms-flex-preferred-size: 0;
-      flex-basis: 0;
-      max-width: 100%;
-    }
-  
-    .col-lg-3 {
-      -ms-flex-preferred-size: 25%;
-      flex-basis: 25%;
-      max-width: 25%;
-    }
-  
-    .col-lg-4 {
-      -ms-flex-preferred-size: 33.33333333%;
-      flex-basis: 33.33333333%;
-      max-width: 33.33333333%;
-    }
 
-    .col-lg-5 {
-      -ms-flex-preferred-size: 41.66666667%;
-      flex-basis: 41.66666667%;
-      max-width: 41.66666667%;
-    }
-  
-    .col-lg-6 {
-      -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-      max-width: 50%;
-    }
-
-    .col-lg-7 {
-      -ms-flex-preferred-size: 58.33333333%;
-      flex-basis: 58.33333333%;
-      max-width: 58.33333333%;
-    }
-  
-    .col-lg-12 {
-      -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
-      max-width: 100%;
-    }
-  
+  .col-sm-3 {
+    -ms-flex-preferred-size: 25%;
+    flex-basis: 25%;
+    max-width: 25%;
   }
+
+  .col-sm-4 {
+    -ms-flex-preferred-size: 33.33333333%;
+    flex-basis: 33.33333333%;
+    max-width: 33.33333333%;
+  }
+
+  .col-sm-5 {
+    -ms-flex-preferred-size: 41.66666667%;
+    flex-basis: 41.66666667%;
+    max-width: 41.66666667%;
+  }
+
+  .col-sm-6 {
+    -ms-flex-preferred-size: 50%;
+    flex-basis: 50%;
+    max-width: 50%;
+  }
+
+  .col-sm-7 {
+    -ms-flex-preferred-size: 58.33333333%;
+    flex-basis: 58.33333333%;
+    max-width: 58.33333333%;
+  }
+
+  .col-sm-12 {
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .col-md,
+  .col-md-1,
+  .col-md-2,
+  .col-md-3,
+  .col-md-4,
+  .col-md-5,
+  .col-md-6,
+  .col-md-7,
+  .col-md-8,
+  .col-md-9,
+  .col-md-10,
+  .col-md-11,
+  .col-md-12 {
+    flex: 0 0 auto;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+  }
+
+  .col-md {
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    -ms-flex-preferred-size: 0;
+    flex-basis: 0;
+    max-width: 100%;
+  }
+
+  .col-md-3 {
+    -ms-flex-preferred-size: 25%;
+    flex-basis: 25%;
+    max-width: 25%;
+  }
+
+  .col-md-4 {
+    -ms-flex-preferred-size: 33.33333333%;
+    flex-basis: 33.33333333%;
+    max-width: 33.33333333%;
+  }
+
+  .col-md-5 {
+    -ms-flex-preferred-size: 41.66666667%;
+    flex-basis: 41.66666667%;
+    max-width: 41.66666667%;
+  }
+
+  .col-md-6 {
+    -ms-flex-preferred-size: 50%;
+    flex-basis: 50%;
+    max-width: 50%;
+  }
+
+  .col-md-7 {
+    -ms-flex-preferred-size: 58.33333333%;
+    flex-basis: 58.33333333%;
+    max-width: 58.33333333%;
+  }
+
+  .col-md-12 {
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .col-lg,
+  .col-lg-1,
+  .col-lg-2,
+  .col-lg-3,
+  .col-lg-4,
+  .col-lg-5,
+  .col-lg-6,
+  .col-lg-7,
+  .col-lg-8,
+  .col-lg-9,
+  .col-lg-10,
+  .col-lg-11,
+  .col-lg-12 {
+    flex: 0 0 auto;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+  }
+  .col-lg {
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    -ms-flex-preferred-size: 0;
+    flex-basis: 0;
+    max-width: 100%;
+  }
+
+  .col-lg-3 {
+    -ms-flex-preferred-size: 25%;
+    flex-basis: 25%;
+    max-width: 25%;
+  }
+
+  .col-lg-4 {
+    -ms-flex-preferred-size: 33.33333333%;
+    flex-basis: 33.33333333%;
+    max-width: 33.33333333%;
+  }
+
+  .col-lg-5 {
+    -ms-flex-preferred-size: 41.66666667%;
+    flex-basis: 41.66666667%;
+    max-width: 41.66666667%;
+  }
+
+  .col-lg-6 {
+    -ms-flex-preferred-size: 50%;
+    flex-basis: 50%;
+    max-width: 50%;
+  }
+
+  .col-lg-7 {
+    -ms-flex-preferred-size: 58.33333333%;
+    flex-basis: 58.33333333%;
+    max-width: 58.33333333%;
+  }
+
+  .col-lg-12 {
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+    max-width: 100%;
+  }
+}
