Created new component SingleAccomodationDetails

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,7 +4,7 @@ $blackColor: #000;
 $whiteColor: #fff;
 $blueColor: #0a6fba;
 $bodyColor: #fcfcfc;
-$yellowColor: #f3ce56;
+$redColor: #a90000;
 $lightGreenColor: #00874d;
 $darkGrey: #444;
 
