--- a/src/components/Accomodation/AccomodationDetails/Styles.module.scss
+++ b/src/components/Accomodation/AccomodationDetails/Styles.module.scss
@@ -55,4 +55,17 @@
       }
     }
   }
+
+  .accomodationHeader {
+    margin-bottom: 10px;
+    width: 100%;
+    .accomodationTitle {
+      font-weight: $fontSemiBold;
+      color: $redColor;
+      font-size: 16px;
+      line-height: 1.3;
+      text-align: center;
+      text-transform: none;
+    }
+  }
 }
