--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,10 +2,9 @@
 $greyColor: #333;
 $blackColor: #000;
 $whiteColor: #fff;
-$blueColor: #0a6fba;
 $bodyColor: #fcfcfc;
 $redColor: #a90000;
-$lightGreenColor: #00874d;
+$darkOrange: #bd512f;
 $darkGrey: #444;
 
 /*FONTS*/
