--- a/src/components/Accomodation/AccomodationType/Styles.module.scss
+++ b/src/components/Accomodation/AccomodationType/Styles.module.scss
@@ -11,8 +11,8 @@
 }
 
 .innerTitle {
-  margin-bottom: 10px;
-  font-size: 20px;
+  margin-bottom: 15px;
+  font-size: 24px;
   font-weight: $fontSemiBold;
 }
 
@@ -37,5 +37,35 @@
     font-size: 1.4rem;
     line-height: 1.7;
     color: $darkGrey;
+  }
+}
+
+// Room title
+.roomTypeTitle {
+  color: $darkOrange;
+  font-size: 16px;
+  margin-bottom: 5px;
+}
+
+.typesList {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  li {
+    line-height: 1.3;
+    margin-bottom: 10px;
+    font-size: 14px;
+    .typesWrapper {
+      margin-bottom: 5px;
+      .typesHeader {
+        font-size: 14px;
+        @include flex;
+        font-weight: $fontSemiBold;
+        p {
+          font-weight: 400;
+          padding-left: 5px;
+        }
+      }
+    }
   }
 }
