--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,6 +6,8 @@ $bodyColor: #fcfcfc;
 $redColor: #a90000;
 $darkOrange: #bd512f;
 $darkGrey: #444;
+$semiGrey: #393e46;
+$navyGrey: #222831;
 
 /*FONTS*/
 $fontNormal: 400;
