Modified AccomodationTypeDetail.js created new function getAccomodationTypeList

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,6 +8,7 @@ $darkOrange: #bd512f;
 $darkGrey: #444;
 $semiGrey: #393e46;
 $navyGrey: #222831;
+$yellowColor: #dd8011;
 
 /*FONTS*/
 $fontNormal: 400;
