Created file  SingleAccomodationDetails.test.js

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,6 +9,7 @@ $darkGrey: #444;
 $semiGrey: #393e46;
 $navyGrey: #222831;
 $yellowColor: #dd8011;
+$dark-grey: #6e6e6e;
 
 /*FONTS*/
 $fontNormal: 400;
