--- a/src/components/Accomodation/AccomodationDetails/Styles.module.scss
+++ b/src/components/Accomodation/AccomodationDetails/Styles.module.scss
@@ -10,7 +10,7 @@
   background-color: #fff;
   padding: 1rem 1rem 2rem;
   border: 1px solid #e4e4e4;
-  min-height: 350px;
+  min-height: 400px;
   @include flex;
   @include flex-direction(column);
   flex-grow: 1;
@@ -32,6 +32,26 @@
       overflow: hidden;
       position: relative;
       padding-bottom: 75.25%;
+
+      .viewMoreBtn {
+        position: absolute;
+        z-index: 10;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        cursor: pointer;
+        height: 40px;
+        padding: 0 20px;
+        @include flex;
+        @include flex-direction(column);
+        background-color: transparent;
+        border: 1px solid $whiteColor;
+        color: $whiteColor;
+        justify-content: center;
+        font-size: 14px;
+        letter-spacing: 1px;
+      }
+
       &:after {
         display: block;
         content: '';
@@ -40,7 +60,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.6);
+        background-color: rgba(0, 0, 0, 0.7);
         z-index: 6;
       }
       img {
@@ -61,11 +81,29 @@
     width: 100%;
     .accomodationTitle {
       font-weight: $fontSemiBold;
-      color: $redColor;
-      font-size: 16px;
+      color: $semiGrey;
+      font-size: 18px;
       line-height: 1.3;
       text-align: center;
       text-transform: none;
+    }
+  }
+}
+
+.accomodationTypeFooter {
+  width: 100%;
+  @include flex;
+  height: 30px;
+  align-items: center;
+  justify-content: space-between;
+  .ratingWrapper {
+    p {
+      font-size: 12px;
+      .starRating {
+        color: $yellowColor;
+        font-weight: $fontSemiBold;
+        font-size: 14px;
+      }
     }
   }
 }
