Modified component AccomodationRoomsDetails - added extra styles

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -10,6 +10,7 @@ $semiGrey: #393e46;
 $navyGrey: #222831;
 $yellowColor: #dd8011;
 $dark-grey: #6e6e6e;
+$text-color-light: #3f51b5;
 
 /*FONTS*/
 $fontNormal: 400;
