--- a/src/components/Accomodation/AccomodationType/Styles.module.scss
+++ b/src/components/Accomodation/AccomodationType/Styles.module.scss
@@ -63,6 +63,20 @@
     line-height: 1.3;
     margin-bottom: 10px;
     font-size: 14px;
+    .priceWrapper {
+      padding: 15px 0;
+      .typesPrice {
+        font-size: 16px;
+        @include flex;
+        font-weight: $fontSemiBold;
+
+        p {
+          color: $text-color-light;
+          padding-left: 5px;
+          font-size: 16px;
+        }
+      }
+    }
     .typesWrapper {
       margin-bottom: 8px;
       line-height: 1.3;
@@ -102,4 +116,11 @@
       font-size: 14px;
     }
   }
+}
+
+.soldOutAlert {
+  font-weight: $fontSemiBold;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: $redColor;
 }
