--- a/src/components/Accomodation/Pagination/Styles.module.scss
+++ b/src/components/Accomodation/Pagination/Styles.module.scss
@@ -1,2 +1,50 @@
 @import '../../../styles/variables';
 @import '../../../styles/mixins';
+
+.topPaginationWrapper {
+  @include flex;
+  justify-content: flex-end;
+}
+
+.numberOfPagesAlert {
+  display: block;
+  position: relative;
+  top: 17%;
+  font-size: 14px;
+  margin-right: 10px;
+}
+
+.accomodationPaginationList {
+  @include flex;
+  align-items: center;
+  height: 40px;
+  justify-content: flex-end;
+  padding: 0 15px;
+  margin: 0;
+  list-style: none;
+  border: 1px solid rgba($dark-grey, 0.2);
+  margin-bottom: 20px;
+
+  .paginationItem {
+    width: 20px;
+    height: 25px;
+    border: 1px solid rgba($dark-grey, 0.4);
+    margin-right: 10px;
+    @include flex;
+    @include flex-direction(column);
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    &:last-child {
+      margin-right: 0;
+    }
+    &.activePag {
+      border-color: $yellowColor;
+    }
+    .paginationNumbers {
+      display: block;
+      font-size: 12px;
+      cursor: pointer;
+    }
+  }
+}
