Created Header and NavigationBar components

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -6,6 +6,7 @@
   @include flex;
   @include flex-direction(column);
   background-color: $bodyColor;
+  padding-top: 40px;
 }
 .main {
   position: relative;
