--- a/src/components/Accomodation/Styles.module.scss
+++ b/src/components/Accomodation/Styles.module.scss
@@ -5,7 +5,7 @@
   @include flex;
   @include flex-direction(column);
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 40px);
   justify-content: center;
   padding: 0 30px;
   @include breakpoint('mini-tab') {
