Created and styled Input component

--- a/src/components/Accomodation/Filters/Styles.module.scss
+++ b/src/components/Accomodation/Filters/Styles.module.scss
@@ -7,4 +7,10 @@
     font-size: 12px;
     font-weight: $fontSemiBold;
   }
+
+  .postCodeAlertLabel {
+    font-size: 12px;
+    display: block;
+    font-weight: $fontSemiBold;
+  }
 }
